// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`skeleton rendering does not render hash instead of the special syntax {#T} inside link text 1`] = `"%%%1%%% [{#T}](file.md \\"%%%2%%%\\") %%%3%%%"`;

exports[`skeleton rendering does not render hashes instead of the {% include ... %} syntax 1`] = `
"{% include notitle [Description](../_includes/file.md) %}

{% include [Description](../_includes/file.md) %}"
`;

exports[`skeleton rendering renders hash instead of the content from markdown with anchors in text 1`] = `
"# %%%1%%%
%%%2%%%
## %%%3%%% {#anchor}"
`;

exports[`skeleton rendering renders hash instead of the content from markdown with checkboxes in text 1`] = `
"[ ] %%%1%%%

[x] %%%2%%%
- [_] %%%3%%%
- [-] %%%4%%%
- [ ] %%%5%%%
- [x] %%%6%%%
- [X] %%%7%%%

- %%%8%%%
  - [x] %%%9%%%
  - [ ] %%%10%%%"
`;

exports[`skeleton rendering renders hash instead of the content from markdown with cuts 1`] = `
"
{% cut \\"%%%1%%%\\" %}

%%%2%%%

{% endcut %}"
`;

exports[`skeleton rendering renders hash instead of the content from markdown with file in text 1`] = `"{% file src=\\"sample-file\\" name=\\"%%%1%%%\\" type=\\"application/zip\\" %} %%%2%%% {% file src=\\"sample-file\\" name=\\"%%%3%%%\\" type=\\"application/zip\\" %}"`;

exports[`skeleton rendering renders hash instead of the content from markdown with gfm tables 1`] = `
"|%%%1%%%|%%%2%%%|
|-----------|-----------|
|[%%%3%%%](https://www.google.com)|**%%%4%%%**|
|![%%%5%%%](image.png \\"%%%6%%%\\")|*%%%7%%%*|
"
`;

exports[`skeleton rendering renders hash instead of the content from markdown with imsize images 1`] = `"%%%1%%% ![%%%2%%%](image.png \\"%%%3%%%\\" =13x37) %%%4%%%"`;

exports[`skeleton rendering renders hash instead of the content from markdown with liquid conditionals 1`] = `
"# %%%1%%%
{% if OS == 'iOS' %}

%%%2%%% [%%%3%%%](https://www.apple.com/ios/app-store/)%%%4%%%

{% else %}

%%%5%%% [%%%6%%%](https://play.google.com)%%%7%%%

%%%8%%% {% if  OS == 'iOS' %} %%%9%%% {% else %} %%%10%%% {% endif %} %%%11%%%

{% endif %}"
`;

exports[`skeleton rendering renders hash instead of the content from markdown with liquid filters 1`] = `
"# %%%1%%%
%%%2%%%

%%%3%%%"
`;

exports[`skeleton rendering renders hash instead of the content from markdown with liquid functions 1`] = `
"%%%1%%%

%%%2%%%

%%%3%%%"
`;

exports[`skeleton rendering renders hash instead of the content from markdown with liquid variables 1`] = `
"# %%%1%%%
%%%2%%%

%%%3%%% [%%%4%%%](files/file.md \\"%%%5%%%\\")

![%%%6%%%](files/image.png \\"%%%7%%%\\")"
`;

exports[`skeleton rendering renders hash instead of the content from markdown with loops 1`] = `
"# %%%1%%%
{% for element in array %}

%%%2%%%

{% endfor %}

%%%3%%% {% for element in array %} %%%4%%% {% endfor %} %%%5%%%"
`;

exports[`skeleton rendering renders hash instead of the content from markdown with meta 1`] = `
"---
title: '%%%1%%%'
description: '%%%2%%% %%%3%%% %%%4%%%'
key: |
  %%%5%%%
seq:
  - '%%%6%%%'
  - '%%%7%%%'
  - '%%%8%%%'
  - '%%%9%%%'
  - '%%%10%%%'
  - '%%%11%%%'
seq_of_mappings:
  - name: '%%%12%%%'
    age: 13
  - name: '%%%13%%%'
    age: 99
object_inline:
  name: '%%%14%%%'
  age: 33
array_inline:
  - '%%%15%%%'
  - '%%%16%%%'
  - '%%%17%%%'
  - '%%%18%%%'
seq_of_seq:
  - - '%%%19%%%'
    - 65
    - 0.278
  - - '%%%20%%%'
    - 63
    - 0.288
nesting:
  - children:
      - name: '%%%21%%%'
      - name: '%%%22%%%'
---
# %%%23%%%
%%%24%%% %%%25%%%"
`;

exports[`skeleton rendering renders hash instead of the content from markdown with monospace text 1`] = `
"##%%%1%%%##
%%%2%%% ##%%%3%%%## %%%4%%%**%%%5%%%** %%%6%%%##%%%7%%%##%%%8%%%
[%%%9%%% ##%%%10%%%## %%%11%%% ##%%%12%%%##](href \\"%%%13%%%\\")"
`;

exports[`skeleton rendering renders hash instead of the content from markdown with multiline tables 1`] = `
"#|
||
**%%%1%%%**
|
**%%%2%%%**
||
||
%%%3%%%
|
%%%4%%%
||
|#

- %%%5%%%

  #|
  ||
  %%%6%%%
  |
  %%%7%%%
  ||
  ||
  %%%8%%%
  |
  %%%9%%%
  ||
  |#

  %%%10%%%"
`;

exports[`skeleton rendering renders hash instead of the content from markdown with notes 1`] = `
"
{% note info \\"%%%1%%%\\" %}

%%%2%%%

{% endnote %}
- %%%3%%%

  {% note alert \\"%%%4%%%\\" %}

  %%%5%%%

  {% endnote %}"
`;

exports[`skeleton rendering renders hash instead of the content from markdown with strikethrough 1`] = `
"~~%%%1%%%~~
[%%%2%%% ~~%%%3%%%~~ %%%4%%% ~~%%%5%%%~~](href \\"%%%6%%%\\")"
`;

exports[`skeleton rendering renders hash instead of the content from markdown with sup text 1`] = `
"%%%1%%%^%%%2%%%^ %%%3%%%
%%%4%%%^%%%5%%%^ %%%6%%%
[%%%7%%%^%%%8%%%^ %%%9%%%](file.md)"
`;

exports[`skeleton rendering renders hash instead of the content from markdown with tabs 1`] = `
"{% list tabs %}

- %%%1%%%

  %%%2%%%
  - %%%3%%%
    
    %%%4%%%
- %%%5%%%

  %%%6%%%

{% endlist %}


{% list tabs %}

* %%%7%%%

  %%%8%%%

{% endlist %}
"
`;

exports[`skeleton rendering renders hash instead of the content from markdown with video 1`] = `
"@[youtube](https://www.youtube.com/video?v=dQw4w9WgXcQ) %%%1%%%
@[youtube](dQw4w9WgXcQ)"
`;

exports[`skeleton rendering renders hashes instead of content of the text tokens 1`] = `
"# %%%1%%%
%%%2%%%
- %%%3%%%
- %%%4%%%
%%%5%%%
-----------
%%%6%%% **%%%7%%%** %%%8%%% *%%%9%%%*

%%%10%%% %%%11%%%
> %%%12%%%
1. %%%13%%%
2. %%%14%%%

[%%%15%%% %%%16%%%](files/file.md \\"%%%17%%% %%%18%%%\\")

![%%%19%%% %%%20%%%](files/image.png \\"%%%21%%% %%%22%%%\\")"
`;
